Add sorting algorithms and update logic problems
Added implementations for Merge Sort, Quick Sort, Recursive Bubble Sort, and Recursive Insertion Sort. Introduced Armstrong number checker. Updated GCD with an additional method. Improved CombinationSum with a main method and fixed backtracking. Modified Combinations and PowerSet for clarity and demonstration.